// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList snapshots Row renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
  border: 1px solid #000;
  padding: 20px;
}

.c0 span {
  display: block;
  margin-bottom: 5px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`UserList snapshots UserInfo renders correctly 1`] = `
.c0 {
  border-right: 1px solid #000;
  text-align: left;
  width: 260px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`UserList snapshots Users renders correctly 1`] = `
.c0 {
  max-height: 300px;
  overflow: scroll;
  margin-top: 15px;
}

<div>
  <div
    class="c0"
  />
</div>
`;
